Fix spacing in compound form field.

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -561,6 +561,7 @@ form label {
 }
 form label + textarea,
 form label + input,
+form .compound-users select,
 form label + select {
   margin-top: 5px;
 }
